[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/FighterTemp/Vigilante_Crouch.png" type="Texture" id=1]
[ext_resource path="res://objects/player1.gd" type="Script" id=14]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Jump.png" type="Texture" id=15]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Jump_Kick.png" type="Texture" id=16]
[ext_resource path="res://sprites/FighterTemp/Idle/Vigilante_Idle_2.png" type="Texture" id=17]
[ext_resource path="res://sprites/FighterTemp/Run/Vigilante_Run_2.png" type="Texture" id=18]
[ext_resource path="res://sprites/FighterTemp/Run/Vigilante_Run_3.png" type="Texture" id=19]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Down_Death.png" type="Texture" id=20]
[ext_resource path="res://sprites/FighterTemp/Idle/Vigilante_Idle_1.png" type="Texture" id=21]
[ext_resource path="res://sprites/FighterTemp/Run/Vigilante_Run_4.png" type="Texture" id=22]
[ext_resource path="res://sprites/FighterTemp/Idle/Vigilante_Idle_4.png" type="Texture" id=23]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Punch_1.png" type="Texture" id=24]
[ext_resource path="res://sprites/FighterTemp/Idle/Vigilante_Idle_3.png" type="Texture" id=25]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Hurt.png" type="Texture" id=26]
[ext_resource path="res://sprites/FighterTemp/Run/Vigilante_Run_1.png" type="Texture" id=27]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Punch_2.png" type="Texture" id=28]
[ext_resource path="res://sprites/FighterTemp/Vigilante_Kick.png" type="Texture" id=29]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 15 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "Attack",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "sp01",
"speed": 5.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 14 )
gravity = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 6 )
shape = SubResource( 2 )

[node name="Player" type="Node2D" parent="."]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Player"]
position = Vector2( 1, 6 )
frames = SubResource( 3 )
animation = "Crouch"

[node name="atkTimer" type="Timer" parent="."]
wait_time = 0.55

[connection signal="timeout" from="atkTimer" to="." method="_on_atkTimer_timeout"]
